--- a/frontend/app/organism-list-map/organism-list-map.component.html
+++ b/frontend/app/organism-list-map/organism-list-map.component.html
@@ -1,3 +1,34 @@
+<div class="float-btns">
+  <button
+    id="add-btn"
+    mat-raised-button
+    color="primary"
+    class="button-success hard-shadow btn-action uppercase"
+    [routerLink]="['add']"
+    matTooltip="Ajouter une nouvelle station d'habitat"
+  >
+    Ajouter
+    <mat-icon>add_circle_outline</mat-icon>
+  </button>
+  <!-- <button
+    (click)="isCollapseFilter = !isCollapseFilter"
+    [attr.aria-expanded]="!isCollapseFilter"
+    class="hard-shadow btn-action uppercase"
+    mat-raised-button
+    color="primary"
+    matTooltip="Rechercher des habitats"
+    [matBadgeHidden]="mapListFormService.nbOfFilter() == 0"
+    [matBadge]="mapListFormService.nbOfFilter()"
+    matBadgeColor="warn"
+  >
+    Filter
+    <i
+      class="fa fa-sliders"
+      aria-hidden="true"
+    ></i>
+  </button> -->
+</div>
+
 <div class="row">
   <div class="col-6">
     <pnx-map height="87vh">
