--- a/frontend/app/organism-map-form/organism-map-form.component.html
+++ b/frontend/app/organism-map-form/organism-map-form.component.html
@@ -50,7 +50,7 @@
             />
           </div>
           <div class="form-group">
-            <label for="OrganismUrl">Description</label>
+            <label for="OrganismUrl">Url</label>
             <input
               [formControl]="organismForm.get('url')"
               type="text"
