fix undefined organism

--- a/frontend/app/organism-list-map/organism-list-map.component.html
+++ b/frontend/app/organism-list-map/organism-list-map.component.html
@@ -52,7 +52,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let organisme of organismes.features; index as i">
+        <tr *ngFor="let organisme of organismes?.features; index as i">
           <td scope="row">{{ i + 1 }}</td>
           <td>
             {{ organisme['properties'].nom }}
